2.7 Monitoreo de eventos
